fix: remove vertical-align: middle from all app-specific col-select rules

--- a/static/css/apps/activity.css
+++ b/static/css/apps/activity.css
@@ -31,7 +31,6 @@ Activity list table
   padding-left: 0;
   padding-right: 0;
   text-align: center;
-  vertical-align: middle;
   width: 2.5rem;
 }
 
