--- a/static/css/apps/case.css
+++ b/static/css/apps/case.css
@@ -9,7 +9,6 @@
   padding-left: 0;
   padding-right: 0;
   text-align: center;
-  vertical-align: middle;
   width: 2.5rem;
 }
 
@@ -259,7 +258,6 @@
   padding-left: 0;
   padding-right: 0;
   text-align: center;
-  vertical-align: middle;
   width: 2.5rem;
 }
 
